@@ -1,5 +1,3 @@
-//> using javacOpt --enable-preview --source 17
-
 package i18533;
 
 public non-sealed class Dog extends Pet {
